--- a/.github/actions/check-version/action.yml
+++ b/.github/actions/check-version/action.yml
@@ -7,6 +7,8 @@ runs:
   steps:
   - name: Checkout repository
     uses: actions/checkout@v4.1.1
+    with:
+      fetch-depth: 2
 
   - name: Set up Python
     uses: actions/setup-python@v5.0.0
