--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,14 +1,12 @@
 name: Build for Android
 
 on:
+  workflow_call:
   workflow_dispatch:
-
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build_android:
+    name: Build for Android
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +17,7 @@ jobs:
       uses: actions/setup-python@v5.0.0
       with:
         python-version: "3.10"
+        cache: pip
 
     - name: Set up JDK
       uses: actions/setup-java@v4.1.0
@@ -26,7 +25,7 @@ jobs:
         distribution: temurin
         java-version: 17
 
-    - name: Setup Gradle
+    - name: Set up Gradle
       uses: gradle/actions/setup-gradle@v3
 
     - name: Set up Android SDK
@@ -40,26 +39,21 @@ jobs:
       run: |
         pip install briefcase
 
-    - name: Build and Package
+    - name: Build package
       run: |
-        briefcase package android -p apk -vv
+        briefcase package android -p apk
       working-directory: ${{ github.workspace }}
 
     - name: Sign APK
-      uses: Tlaster/android-sign@v1.2.2
-      with:
-        releaseDirectory: dist/
-        signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
-        output: dist/
-        alias: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
-        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-        keyPassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-      env:
-        BUILD_TOOLS_VERSION: 34.0.0
+      run: |
+        echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > xdcheckin.keystore
+        jarsigner -keystore xdcheckin.keystore -storepass ${{ secrets.ANDROID_KEYSTORE_PASSWORD }} dist/*.apk ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
+      working-directory: ${{ github.workspace }}
 
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
         if-no-files-found: error
-        name: package_android
-        path: dist/*-signed.apk
+        name: dist_android
+        path: |
+          dist/*.apk
