--- a/.github/workflows/build-fedora.yml
+++ b/.github/workflows/build-fedora.yml
@@ -1,14 +1,12 @@
 name: Build for Fedora
 
 on:
+  workflow_call:
   workflow_dispatch:
-
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build_fedora:
+    name: Build for Fedora
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +17,13 @@ jobs:
       uses: actions/setup-python@v5.0.0
       with:
         python-version: "3.10"
+        cache: pip
 
     - name: Install dependencies
       run: |
         pip install briefcase
 
-    - name: Build and Package
+    - name: Build package
       run: |
         briefcase package --target fedora
       working-directory: ${{ github.workspace }}
@@ -33,5 +32,6 @@ jobs:
       uses: actions/upload-artifact@v4.3.1
       with:
         if-no-files-found: error
-        name: package_fedora
-        path: dist/*.rpm
+        name: dist_fedora
+        path: |
+          dist/*.rpm
