--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -1,14 +1,12 @@
 name: Build for Ubuntu
 
 on:
+  workflow_call:
   workflow_dispatch:
-
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build_ubuntu:
+    name: Build for Ubuntu
     runs-on: ubuntu-latest
 
     steps:
@@ -19,13 +17,14 @@ jobs:
       uses: actions/setup-python@v5.0.0
       with:
         python-version: "3.10"
+        cache: pip
 
     - name: Install dependencies
       run: |
         sudo apt install -y libcairo2-dev libgirepository1.0-dev
         pip install briefcase
 
-    - name: Build and Package
+    - name: Build package
       run: |
         briefcase package
       working-directory: ${{ github.workspace }}
@@ -34,5 +33,6 @@ jobs:
       uses: actions/upload-artifact@v4.3.1
       with:
         if-no-files-found: error
-        name: package_ubuntu
-        path: dist/*.deb
+        name: dist_ubuntu
+        path: |
+          dist/*.deb
