--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -1,15 +1,12 @@
-name: Build Wheel
+name: Build Python Wheel
 
 on:
+  workflow_call:
   workflow_dispatch:
 
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-
   build_wheel:
+    name: Build Python Wheel
     runs-on: ubuntu-latest
 
     steps:
@@ -20,12 +17,13 @@ jobs:
       uses: actions/setup-python@v5.0.0
       with:
         python-version: "3.10"
+        cache: pip
 
     - name: Install dependencies
       run: |
         pip install build
 
-    - name: Build and Package
+    - name: Build package
       run: |
         python -m build
       working-directory: ${{ github.workspace }}
@@ -34,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v4.3.1
       with:
         if-no-files-found: error
-        name: package_wheel
+        name: dist_wheel
         path: |
           dist/*.whl
           dist/*.tar.gz
