--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,11 @@ concurrency:
 jobs:
   check_version:
     name: Check for version increment
-    uses: Pairman/test/.github/workflows/check-version.yml@main
+    uses: Pairman/Xdcheckin/.github/workflows/check-version.yml@main
 
   build:
     name: Build packages
-    uses: Pairman/test/.github/workflows/build.yml@main
+    uses: Pairman/Xdcheckin/.github/workflows/build.yml@main
     needs: check_version
     secrets: inherit
     if: ${{ needs.check_version.outputs.version_change == 'true' }}
