--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -50,10 +50,21 @@ jobs:
         jarsigner -keystore xdcheckin.keystore -storepass ${{ secrets.ANDROID_KEYSTORE_PASSWORD }} dist/*.apk ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
       working-directory: ${{ github.workspace }}
 
+    - name: Sign APK
+      uses: r0adkll/sign-android-release@f30bdd30588842ac76044ecdbd4b6d0e3e813478
+      with:
+        releaseDirectory: dist/*.apk
+        signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
+        alias: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
+        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+        keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+      env:
+        BUILD_TOOLS_VERSION: 34.0.0
+
     - name: Upload package
       uses: actions/upload-artifact@v4.3.1
       with:
         if-no-files-found: error
         name: dist_android
         path: |
-          dist/*.apk
+          dist/*-signed.apk
