--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: publish_pypi
+      name: publish-pypi
       url: https://pypi.org/project/Xdcheckin
     permissions:
       id-token: write
