--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -5,21 +5,21 @@ on:
     outputs:
       version:
         description: The current version in project metadata
-        value: ${{ jobs.check_version.outputs.version }}
+        value: ${{ jobs.check-version.outputs.version }}
       version_change:
         description: Whether the version changed in the last commit
-        value: ${{ jobs.check_version.outputs.version_change }}
+        value: ${{ jobs.check-version.outputs.version_change }}
 
   workflow_dispatch:
 
 jobs:
-  check_version:
+  check-version:
     name: Check Version
     runs-on: ubuntu-latest
 
     outputs:
-      version: ${{ steps.check_version.outputs.version }}
-      version_change: ${{ steps.check_version.outputs.version_change }}
+      version: ${{ steps.check-version.outputs.version }}
+      version_change: ${{ steps.check-version.outputs.version_change }}
 
     steps:
     - name: Checkout repository
@@ -38,7 +38,7 @@ jobs:
         pip install toml
 
     - name: Read and check for version increment
-      id: check_version
+      id: check-version
       run: |
         version=$(python -c "from toml import load; print(load(open('pyproject.toml'))['project']['version'])")
         git checkout HEAD^
