include chabgelog url in project info

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
 
 [project.urls]
 Homepage = "https://github.com/Pairman/Xdcheckin"
+Changelog = "https://github.com/Pairman/Xdcheckin/blob/main/CHANGELOG.md"
 
 [project.scripts]
 xdcheckin-server = "xdcheckin.server.server:main"
