--- a/.github/workflows/force-release.yml
+++ b/.github/workflows/force-release.yml
@@ -30,6 +30,9 @@ jobs:
       - build
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.1
+
       - name: Download artifacts
         uses: actions/download-artifact@v4.1.4
 
