--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1.8.14
         with:
-          packages-dir: dist_wheel/
+          packages-dir: ${{ inputs.working-directory }}/dist_wheel/
