--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/download-artifact@v4.1.4
         with:
           name: dist_wheel
+          path: dist_wheel
 
       - name: List dist
         run: |
@@ -40,3 +41,5 @@ jobs:
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1.8
+        with:
+          packages-dir: dist_wheel/
