--- a/pyproject.toml
+++ b/pyproject.toml
@@ -223,6 +223,11 @@ requires = [
 	"toga-android~=0.4.0",
 ]
 
+build_gradle_dependencies = [
+	"androidx.appcompat:appcompat:1.0.2",
+	"androidx.constraintlayout:constraintlayout:1.1.3",
+]
+
 build_gradle_extra_content = """
 android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 """
