server.py async rework

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,11 @@ requires-python = ">=3.8"
 dependencies = [
 	"aiocache",
 	"aiohttp",
-	"flask >= 3.0.0",
-	"flask-session == 0.6.0",
+	"aiohttp-session",
 	"pillow >= 8.4.0",
 	"pycryptodome >= 3.9.4",
 	"pyjsbitwise >= 1.0.1",
 	"pyzbar >= 0.1.8",
-	"waitress >= 3.0.0",
 ]
 
 [project.urls]
@@ -70,13 +68,11 @@ sources = [
 requires = [
 	"aiocache",
 	"aiohttp",
-	"flask >= 3.0.0",
-	"flask-session == 0.6.0",
+	"aiohttp-session",
 	"pillow >= 8.4.0",
 	"pycryptodome >= 3.9.4",
 	"pyjsbitwise >= 1.0.1",
 	"pyzbar >= 0.1.8",
-	"waitress >= 3.0.0",
 ]
 # test_requires = []
 
