--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Homepage = "https://github.com/Pairman/Xdcheckin"
 Changelog = "https://github.com/Pairman/Xdcheckin/blob/main/CHANGELOG.md"
 
 [project.scripts]
-xdcheckin-server = "xdcheckin.server.server:main"
+xdcheckin-server = "xdcheckin.server.server:_main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
