fix Chaoxing and IDSSession

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install briefcase
+        pip install briefcase toga
 
     - name: Build package
       run: |
