--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,9 +224,7 @@ requires = [
 	"toga-android~=0.4.0",
 ]
 
-build_gradle_dependencies = [
-	"androidx.appcompat:appcompat:1.6.1",
-]
+build_gradle_dependencies = []
 
 build_gradle_extra_content = """
 android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
