--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,13 +72,13 @@ requires = [
 [tool.briefcase.app.xdcheckin.macOS]
 universal_build = true
 requires = [
-	"toga-cocoa~=0.4.0",
+	"toga-cocoa~=0.4.5",
 	"std-nslog~=1.0.0",
 ]
 
 [tool.briefcase.app.xdcheckin.linux]
 requires = [
-	"toga-gtk~=0.4.0",
+	"toga-gtk~=0.4.5",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.system.debian]
@@ -136,7 +136,6 @@ system_runtime_requires = [
 	"libcanberra-gtk3-module",
 	# Needed to provide WebKit2 at runtime
 	# "libwebkit2gtk3", "typelib(WebKit2)",
-	# "typelib(WebKit2)",
 ]
 
 [tool.briefcase.app.xdcheckin.linux.system.arch]
@@ -194,23 +193,24 @@ flatpak_sdk = "org.gnome.Sdk"
 
 [tool.briefcase.app.xdcheckin.windows]
 requires = [
-	"toga-winforms~=0.4.0",
+	"toga-winforms~=0.4.5",
 ]
 
 # Mobile deployments
 [tool.briefcase.app.xdcheckin.iOS]
 requires = [
-	"toga-iOS~=0.4.0",
+	"toga-iOS~=0.4.5",
 	"std-nslog~=1.0.0",
 ]
 
 [tool.briefcase.app.xdcheckin.android]
 requires = [
-	"toga-android~=0.4.0",
+	"toga-android~=0.4.5",
 ]
 
 build_gradle_dependencies = [
-	"androidx.appcompat:appcompat:1.0.2",
+	"com.google.android.material:material:1.11.0",
+	# "androidx.appcompat:appcompat:1.0.2",
 ]
 
 build_gradle_extra_content = """
@@ -220,7 +220,7 @@ android.defaultConfig.ndk.abiFilters = ['arm64-v8a']
 # Web deployments
 [tool.briefcase.app.xdcheckin.web]
 requires = [
-	"toga-web~=0.4.0",
+	"toga-web~=0.4.5",
 ]
 
 style_framework = "Shoelace v2.3"
