--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Xdcheckin"
-version = "3.9.5"
+version = "3.9.6"
 authors = [{name = "Pairman", email = "pairmanxlr@gmail.com"}]
 readme = "README.md"
 description = "Chaoxing Checkin Tool for XDU."
@@ -27,6 +27,7 @@ dependencies = [
 
 [project.optional-dependencies]
 image = [
+	"pillow>=8.4.0",
 	"pyzbar>=0.1.8",
  	"xdcheckin-ffmpeg>=1.0.0",
 ]
